# screaming-frog-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json  sf_mcp.py
src/screaming_frog_mcp/: server.py
