[project]
name = "screaming-frog-mcp"
version = "0.1.0"
description = "MCP server for Screaming Frog SEO Spider — crawl sites, export data, and manage crawl storage via AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Boaz Sasson" }]
keywords = ["mcp", "seo", "screaming-frog", "crawl", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bzsasson/screaming-frog-mcp"
Repository = "https://github.com/bzsasson/screaming-frog-mcp"
Issues = "https://github.com/bzsasson/screaming-frog-mcp/issues"

[project.scripts]
screaming-frog-mcp = "screaming_frog_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screaming_frog_mcp"]
